# quist

./: CMakeLists.txt  Matrix.hpp  README.md  bla.hpp  equal.hpp  main.cpp  matrix.hpp  quist.kdev4
bla/: bla.hpp  math.hpp
bla/test/data/: spline_test1.h5
demo/: analyze.R  generate.R  input.tsv  raw-scores_r.vtr  run.sh
demo/output/: modes.tsv  raw-scores.vtr  scores.vtr
emd/: emd.hpp
emd/cuda/: CMakeLists.txt  dsemd.cu  dsemd0.cu  emd.cu  emd0.cu  emd_kernel.hpp  emd_kernel0.hpp  emd_strat.cu  minima.cu  scan.cu  scan_kernel.hpp  scan_kernel_excl.hpp  spline.cu  spline_kernel.hpp  tridiag.cu  tridiag_rd_kernel.hpp  util.hpp
emd/cuda/cudpp/: crpcr.hpp
emd/test/: emd_test.cpp
emd/test/data/: extrema_test.h5
hdf5/: data.hpp
numeric/: bla.hpp  math.hpp  stats.hpp
numeric/test/: CMakeLists.txt  bla_test.cpp
numeric/test/data/: spline_test0.h5
res/: spline_benchmark.txt
signal/: dsemd.hpp  eemd.hpp  emd.hpp  util.hpp
signal/cuda/: CMakeLists.txt  dsemd.cu  dsemd0.cu  emd.cu  emd_strat.cu  scan_excl.cu  spline.cu  tridiag.cu
signal/cuda/cudpp/: crpcr.hpp  tridiag_crpcr_kernel.hpp
signal/cuda/scan/: inclusive_scan.hpp
signal/cuda/scan/example/: exclusive_scan.cu  inclusive_scan.cu  inclusive_scan_full.cu
signal/cuda/scan/functor/: array_functor.hpp  dynamic_matrix_functor.hpp  scalar_functor.hpp  static_matrix_functor.hpp
signal/cuda/scan/kernel/: exclusive_scan_kernel.hpp  inclusive_scan_kernel.hpp
signal/cuda/spline/: spline.hpp
signal/cuda/spline/example/: spline.cu  spline_benchmark.cu  spline_full.cu
signal/cuda/spline/kernel/: spline_kernel.hpp
signal/cuda/tridiag/: rd.hpp  thomas.hpp
signal/cuda/tridiag/example/: tridiag.cu  tridiag_full.cu
signal/test/: CMakeLists.txt  emd_test.cpp
signal/test/data/: emd_test_nakspline.h5  emd_test_ncspline.h5
(+2 files in other folders)
